# swarm-planner

./: .gitignore  README.md  pyproject.toml  swarm-planner.md
swarm/: __init__.py  artifacts.py  beads_bridge.py  cli.py  config.py  context.py  dashboard.py  graph_builder.py  models.py  runner.py  schemas.py
swarm/prompts/: 00_codebase_analyzer.md  00_interviewer.md  00b_interviewer_refine.md  01_decomposer.md  01b_decomposer_review.md  02_contract_writer.md  03_contract_resolver.md  04_adversary.md  05_adversary_resolver.md  06_sequencer.md  07_simulator.md
swarm/static/: dashboard.html
